Fixed calendar z-index

--- a/css/style.scss
+++ b/css/style.scss
@@ -196,7 +196,7 @@ div#calendar {
 	top: 10%;
 	left: 20%;
 	height: 70%;
-	z-index: 100;
+	z-index: -100;
 
 }
 
